[package]
name = "datalake_hunter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.13", features = ["derive"] }
log = "0.4.17"
env_logger = "0.9.0"
bloomfilter = "1.0.9"
serde = "1.0.143"

[dev-dependencies]