[package]
name = "dtl_hunter"
version = "0.3.0-pre.3"
edition = "2021"
authors = ["Orange Cyberdefense CERT"]
repository = "https://github.com/cert-orangecyberdefense/datalake-hunter"
readme = "README.md"
license = "MIT"
exclude = [
    ".github/*",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.13", features = ["derive"] }
log = "0.4.17"
env_logger = "0.9.0"
bloomfilter = {  version ="1.0.9", features=["serde"] }
serde = "1.0.143"
ron = "0.8.0"
colored = "2.0.0"
csv = "1.1.6"
ocd_datalake_rs = "0.3.0-pre.2"
rpassword = "7.0.0"
spinners = "4.1.0"
[dev-dependencies]